# project/app/OpenAPI/Api/UsersApi.php
@@ -1,0 +1,425 @@
+<?php
+/**
+ * UsersApi
+ * PHP version 7.4
+ *
+ * @category Class
+ * @package  App\OpenAPI
+ * @author   OpenAPI Generator team
+ * @link     https://openapi-generator.tech
+ */
+
+/**
+ * OpenAPI Tutorial
+ *
+ * OpenAPI Tutorial by halhorn
+ *
+ * The version of the OpenAPI document: 0.0.0
+ * Generated by: https://openapi-generator.tech
+ * OpenAPI Generator version: 6.6.0-SNAPSHOT
+ */
+
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+namespace App\OpenAPI\Api;
+
+use GuzzleHttp\Client;
+use GuzzleHttp\ClientInterface;
+use GuzzleHttp\Exception\ConnectException;
+use GuzzleHttp\Exception\RequestException;
+use GuzzleHttp\Psr7\MultipartStream;
+use GuzzleHttp\Psr7\Request;
+use GuzzleHttp\RequestOptions;
+use App\OpenAPI\ApiException;
+use App\OpenAPI\Configuration;
+use App\OpenAPI\HeaderSelector;
+use App\OpenAPI\ObjectSerializer;
+
+/**
+ * UsersApi Class Doc Comment
+ *
+ * @category Class
+ * @package  App\OpenAPI
+ * @author   OpenAPI Generator team
+ * @link     https://openapi-generator.tech
+ */
+class UsersApi
+{
+    /**
+     * @var ClientInterface
+     */
+    protected $client;
+
+    /**
+     * @var Configuration
+     */
+    protected $config;
+
+    /**
+     * @var HeaderSelector
+     */
+    protected $headerSelector;
+
+    /**
+     * @var int Host index
+     */
+    protected $hostIndex;
+
+    /** @var string[] $contentTypes **/
+    public const contentTypes = [
+        'usersRegisterPost' => [
+            'application/json',
+        ],
+    ];
+
+/**
+     * @param ClientInterface $client
+     * @param Configuration   $config
+     * @param HeaderSelector  $selector
+     * @param int             $hostIndex (Optional) host index to select the list of hosts if defined in the OpenAPI spec
+     */
+    public function __construct(
+        ClientInterface $client = null,
+        Configuration $config = null,
+        HeaderSelector $selector = null,
+        $hostIndex = 0
+    ) {
+        $this->client = $client ?: new Client();
+        $this->config = $config ?: new Configuration();
+        $this->headerSelector = $selector ?: new HeaderSelector();
+        $this->hostIndex = $hostIndex;
+    }
+
+    /**
+     * Set the host index
+     *
+     * @param int $hostIndex Host index (required)
+     */
+    public function setHostIndex($hostIndex): void
+    {
+        $this->hostIndex = $hostIndex;
+    }
+
+    /**
+     * Get the host index
+     *
+     * @return int Host index
+     */
+    public function getHostIndex()
+    {
+        return $this->hostIndex;
+    }
+
+    /**
+     * @return Configuration
+     */
+    public function getConfig()
+    {
+        return $this->config;
+    }
+
+    /**
+     * Operation usersRegisterPost
+     *
+     * 新規登録
+     *
+     * @param  \App\OpenAPI\Model\UsersRegisterPostRequest $usersRegisterPostRequest usersRegisterPostRequest (required)
+     * @param  string $contentType The value for the Content-Type header. Check self::contentTypes['usersRegisterPost'] to see the possible values for this operation
+     *
+     * @throws \App\OpenAPI\ApiException on non-2xx response
+     * @throws \InvalidArgumentException
+     * @return \App\OpenAPI\Model\User
+     */
+    public function usersRegisterPost($usersRegisterPostRequest, string $contentType = self::contentTypes['usersRegisterPost'][0])
+    {
+        list($response) = $this->usersRegisterPostWithHttpInfo($usersRegisterPostRequest, $contentType);
+        return $response;
+    }
+
+    /**
+     * Operation usersRegisterPostWithHttpInfo
+     *
+     * 新規登録
+     *
+     * @param  \App\OpenAPI\Model\UsersRegisterPostRequest $usersRegisterPostRequest (required)
+     * @param  string $contentType The value for the Content-Type header. Check self::contentTypes['usersRegisterPost'] to see the possible values for this operation
+     *
+     * @throws \App\OpenAPI\ApiException on non-2xx response
+     * @throws \InvalidArgumentException
+     * @return array of \App\OpenAPI\Model\User, HTTP status code, HTTP response headers (array of strings)
+     */
+    public function usersRegisterPostWithHttpInfo($usersRegisterPostRequest, string $contentType = self::contentTypes['usersRegisterPost'][0])
+    {
+        $request = $this->usersRegisterPostRequest($usersRegisterPostRequest, $contentType);
+
+        try {
+            $options = $this->createHttpClientOption();
+            try {
+                $response = $this->client->send($request, $options);
+            } catch (RequestException $e) {
+                throw new ApiException(
+                    "[{$e->getCode()}] {$e->getMessage()}",
+                    (int) $e->getCode(),
+                    $e->getResponse() ? $e->getResponse()->getHeaders() : null,
+                    $e->getResponse() ? (string) $e->getResponse()->getBody() : null
+                );
+            } catch (ConnectException $e) {
+                throw new ApiException(
+                    "[{$e->getCode()}] {$e->getMessage()}",
+                    (int) $e->getCode(),
+                    null,
+                    null
+                );
+            }
+
+            $statusCode = $response->getStatusCode();
+
+            if ($statusCode < 200 || $statusCode > 299) {
+                throw new ApiException(
+                    sprintf(
+                        '[%d] Error connecting to the API (%s)',
+                        $statusCode,
+                        (string) $request->getUri()
+                    ),
+                    $statusCode,
+                    $response->getHeaders(),
+                    (string) $response->getBody()
+                );
+            }
+
+            switch($statusCode) {
+                case 200:
+                    if ('\App\OpenAPI\Model\User' === '\SplFileObject') {
+                        $content = $response->getBody(); //stream goes to serializer
+                    } else {
+                        $content = (string) $response->getBody();
+                        if ('\App\OpenAPI\Model\User' !== 'string') {
+                            $content = json_decode($content);
+                        }
+                    }
+
+                    return [
+                        ObjectSerializer::deserialize($content, '\App\OpenAPI\Model\User', []),
+                        $response->getStatusCode(),
+                        $response->getHeaders()
+                    ];
+            }
+
+            $returnType = '\App\OpenAPI\Model\User';
+            if ($returnType === '\SplFileObject') {
+                $content = $response->getBody(); //stream goes to serializer
+            } else {
+                $content = (string) $response->getBody();
+                if ($returnType !== 'string') {
+                    $content = json_decode($content);
+                }
+            }
+
+            return [
+                ObjectSerializer::deserialize($content, $returnType, []),
+                $response->getStatusCode(),
+                $response->getHeaders()
+            ];
+
+        } catch (ApiException $e) {
+            switch ($e->getCode()) {
+                case 200:
+                    $data = ObjectSerializer::deserialize(
+                        $e->getResponseBody(),
+                        '\App\OpenAPI\Model\User',
+                        $e->getResponseHeaders()
+                    );
+                    $e->setResponseObject($data);
+                    break;
+            }
+            throw $e;
+        }
+    }
+
+    /**
+     * Operation usersRegisterPostAsync
+     *
+     * 新規登録
+     *
+     * @param  \App\OpenAPI\Model\UsersRegisterPostRequest $usersRegisterPostRequest (required)
+     * @param  string $contentType The value for the Content-Type header. Check self::contentTypes['usersRegisterPost'] to see the possible values for this operation
+     *
+     * @throws \InvalidArgumentException
+     * @return \GuzzleHttp\Promise\PromiseInterface
+     */
+    public function usersRegisterPostAsync($usersRegisterPostRequest, string $contentType = self::contentTypes['usersRegisterPost'][0])
+    {
+        return $this->usersRegisterPostAsyncWithHttpInfo($usersRegisterPostRequest, $contentType)
+            ->then(
+                function ($response) {
+                    return $response[0];
+                }
+            );
+    }
+
+    /**
+     * Operation usersRegisterPostAsyncWithHttpInfo
+     *
+     * 新規登録
+     *
+     * @param  \App\OpenAPI\Model\UsersRegisterPostRequest $usersRegisterPostRequest (required)
+     * @param  string $contentType The value for the Content-Type header. Check self::contentTypes['usersRegisterPost'] to see the possible values for this operation
+     *
+     * @throws \InvalidArgumentException
+     * @return \GuzzleHttp\Promise\PromiseInterface
+     */
+    public function usersRegisterPostAsyncWithHttpInfo($usersRegisterPostRequest, string $contentType = self::contentTypes['usersRegisterPost'][0])
+    {
+        $returnType = '\App\OpenAPI\Model\User';
+        $request = $this->usersRegisterPostRequest($usersRegisterPostRequest, $contentType);
+
+        return $this->client
+            ->sendAsync($request, $this->createHttpClientOption())
+            ->then(
+                function ($response) use ($returnType) {
+                    if ($returnType === '\SplFileObject') {
+                        $content = $response->getBody(); //stream goes to serializer
+                    } else {
+                        $content = (string) $response->getBody();
+                        if ($returnType !== 'string') {
+                            $content = json_decode($content);
+                        }
+                    }
+
+                    return [
+                        ObjectSerializer::deserialize($content, $returnType, []),
+                        $response->getStatusCode(),
+                        $response->getHeaders()
+                    ];
+                },
+                function ($exception) {
+                    $response = $exception->getResponse();
+                    $statusCode = $response->getStatusCode();
+                    throw new ApiException(
+                        sprintf(
+                            '[%d] Error connecting to the API (%s)',
+                            $statusCode,
+                            $exception->getRequest()->getUri()
+                        ),
+                        $statusCode,
+                        $response->getHeaders(),
+                        (string) $response->getBody()
+                    );
+                }
+            );
+    }
+
+    /**
+     * Create request for operation 'usersRegisterPost'
+     *
+     * @param  \App\OpenAPI\Model\UsersRegisterPostRequest $usersRegisterPostRequest (required)
+     * @param  string $contentType The value for the Content-Type header. Check self::contentTypes['usersRegisterPost'] to see the possible values for this operation
+     *
+     * @throws \InvalidArgumentException
+     * @return \GuzzleHttp\Psr7\Request
+     */
+    public function usersRegisterPostRequest($usersRegisterPostRequest, string $contentType = self::contentTypes['usersRegisterPost'][0])
+    {
+
+        // verify the required parameter 'usersRegisterPostRequest' is set
+        if ($usersRegisterPostRequest === null || (is_array($usersRegisterPostRequest) && count($usersRegisterPostRequest) === 0)) {
+            throw new \InvalidArgumentException(
+                'Missing the required parameter $usersRegisterPostRequest when calling usersRegisterPost'
+            );
+        }
+
+
+        $resourcePath = '/users/register';
+        $formParams = [];
+        $queryParams = [];
+        $headerParams = [];
+        $httpBody = '';
+        $multipart = false;
+
+
+
+
+
+        $headers = $this->headerSelector->selectHeaders(
+            ['application/json', ],
+            $contentType,
+            $multipart
+        );
+
+        // for model (json/xml)
+        if (isset($usersRegisterPostRequest)) {
+            if (stripos($headers['Content-Type'], 'application/json') !== false) {
+                # if Content-Type contains "application/json", json_encode the body
+                $httpBody = \GuzzleHttp\Utils::jsonEncode(ObjectSerializer::sanitizeForSerialization($usersRegisterPostRequest));
+            } else {
+                $httpBody = $usersRegisterPostRequest;
+            }
+        } elseif (count($formParams) > 0) {
+            if ($multipart) {
+                $multipartContents = [];
+                foreach ($formParams as $formParamName => $formParamValue) {
+                    $formParamValueItems = is_array($formParamValue) ? $formParamValue : [$formParamValue];
+                    foreach ($formParamValueItems as $formParamValueItem) {
+                        $multipartContents[] = [
+                            'name' => $formParamName,
+                            'contents' => $formParamValueItem
+                        ];
+                    }
+                }
+                // for HTTP post (form)
+                $httpBody = new MultipartStream($multipartContents);
+
+            } elseif (stripos($headers['Content-Type'], 'application/json') !== false) {
+                # if Content-Type contains "application/json", json_encode the form parameters
+                $httpBody = \GuzzleHttp\Utils::jsonEncode($formParams);
+            } else {
+                // for HTTP post (form)
+                $httpBody = ObjectSerializer::buildQuery($formParams);
+            }
+        }
+
+
+        $defaultHeaders = [];
+        if ($this->config->getUserAgent()) {
+            $defaultHeaders['User-Agent'] = $this->config->getUserAgent();
+        }
+
+        $headers = array_merge(
+            $defaultHeaders,
+            $headerParams,
+            $headers
+        );
+
+        $operationHost = $this->config->getHost();
+        $query = ObjectSerializer::buildQuery($queryParams);
+        return new Request(
+            'POST',
+            $operationHost . $resourcePath . ($query ? "?{$query}" : ''),
+            $headers,
+            $httpBody
+        );
+    }
+
+    /**
+     * Create http client option
+     *
+     * @throws \RuntimeException on file opening failure
+     * @return array of http client options
+     */
+    protected function createHttpClientOption()
+    {
+        $options = [];
+        if ($this->config->getDebug()) {
+            $options[RequestOptions::DEBUG] = fopen($this->config->getDebugFile(), 'a');
+            if (!$options[RequestOptions::DEBUG]) {
+                throw new \RuntimeException('Failed to open the debug file: ' . $this->config->getDebugFile());
+            }
+        }
+
+        return $options;
+    }
+}
