# project/openapi/api.yaml
@@ -7,10 +7,10 @@ servers:
   - url: http://localhost:80/api/v1
     description: 開発用
 paths:
-  /register:
+  /users/register:
     post:
       tags:
-        - "authentication"
+        - "users"
       summary: 新規登録
       description: 詳細内容
       requestBody:
@@ -40,7 +40,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
-  /login:
+  /authentication/login:
     post:
       tags:
         - "authentication"
@@ -67,7 +67,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
-  /logout:
+  /authentication/logout:
     post:
       tags:
         - "authentication"
@@ -77,7 +77,7 @@ paths:
         "200":
           description: OK
           content: {}
-  /me:
+  /authentication/me:
     get:
       tags:
         - "authentication"
@@ -156,7 +156,7 @@ paths:
         "200":
           description: OK
           content: {}
-  /oauth/youtube/url:
+  /youtube/oauth/url:
     get:
       tags:
         - "youtube"
@@ -175,7 +175,7 @@ paths:
                     description: "認可画面のリダイレクト用URL"
                 required:
                   - redirectUrl
-  /oauth/youtube:
+  /youtube/oauth:
     post:
       tags:
         - "youtube"
